alignment bugs fix

--- a/src/app/different/different.component.css
+++ b/src/app/different/different.component.css
@@ -196,7 +196,7 @@
 
   position: absolute;
 
-  right: -82px;
+  right: -120px;
 
   top: 190px;
 
