--- a/src/app/properties/our-properties/our-properties.component.css
+++ b/src/app/properties/our-properties/our-properties.component.css
@@ -74,7 +74,7 @@
 .our-properties__hex-icon {
   position: absolute;
   left: 16px;
-  top: 16px;
+  top: 13px;
   width: 32px;
   height: 32px;
 }
